# gst-acelp

./: .gitignore  AUTHORS  README  meson.build
plugins/: c_acelp.h  c_source.h  c_structs.h  cdecoder.c  channel.h  clsp_334.tab  ener_qua.tab  fbas_tet.c  fexp_tet.c  fmat_tet.c  grid.tab  gstacelpenc.c  gstacelpenc.c~  gstacelpenc.h  gstacelpencplugin.c  inv_sqrt.tab  lag_wind.tab  log2.tab  meson.build  pow2.tab  scod_tet.c  sdec_tet.c  sdecoder.c  source.h  structs.c  structs.h  sub_dsp.c  sub_sc_d.c  tetra_op.c  window.tab
tools/: gstacelpenc.c  meson.build
